# DSA-TSC

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/instructions/: loaders.instructions.md  scripts.instructions.md  src.instructions.md  tests.instructions.md  viz.instructions.md
.github/workflows/: pytest.yml
data/: sample_coords.csv  sample_lights.csv  sample_map.csv  sample_vehicles.csv
data/scenarios/: sample.yaml
docs/: COPILOT_GUIDE.md  SCHEMAS.md  api.md  diagrams.md
scripts/: devcheck.sh  gen_random_map.py  run_sim.py
src/traffic_sim/: __init__.py  graph.py  loaders.py  metrics.py  models.py  pathfinding.py  simulation.py  traffic_light.py
src/traffic_sim/utils/: logging.py  rng.py
src/traffic_sim/viz/: ascii_view.py  matplotlib_view.py
tests/: test_pathfinding.py  test_traffic_light.py  test_viz_ascii.py
