[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "traffic-sim-city"
version = "0.1.0"
description = "Traffic simulation skeleton for Case Study 3"
requires-python = ">=3.10"
dependencies = ["pyyaml>=6.0.0","numpy>=2.0.0","matplotlib>=3.9.0"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]


[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E","F","W","I"]
fix = true
